--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".LoginActivity"
+    tools:context=".SignUpActivity"
     android:background="@drawable/bg3">
 
 
@@ -29,26 +29,26 @@
         <androidx.cardview.widget.CardView
 
             android:layout_width="370dp"
-            android:layout_height="600dp"
+            android:layout_height="650dp"
             android:layout_marginTop="100dp"
+            android:layout_marginBottom="1dp"
             android:layout_centerHorizontal="true"
             app:cardCornerRadius="38dp"
-            app:cardBackgroundColor="@color/white"
-            app:cardElevation="10dp">
+            app:cardElevation="8dp">
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-
-
+                android:background="@color/white"
                 >
 
                 <TextView
                     android:id="@+id/Login_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="LOGIN"
+                    android:text="SIGN UP"
                     android:textSize="41sp"
+
                     android:fontFamily="@font/cocogoose"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="30dp"
