--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="purple_200">#FFBB86FC</color>
+    <color name="yellow_musterd">#F7C80A</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
     <color name="teal_200">#FF03DAC5</color>
@@ -8,3 +8,14 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 </resources>
+
+<!--    <?xml version="1.0" encoding="utf-8"?>-->
+<!--<resources>-->
+
+<!--<color name="yellow_musterd">#F7C80A</color>-->
+<!--<color name="purple_700">#F7C80A</color>-->
+<!--<color name="teal_200">#FF03DAC5</color>-->
+<!--<color name="brown">#8F5603</color>-->
+<!--<color name="black">#FF000000</color>-->
+<!--<color name="white">#FFFFFFFF</color>-->
+<!--</resources>-->
