--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,6 +56,15 @@
         android:layout_marginTop="20dp"
         app:backgroundTint="@null"/>
 
+    <ImageView
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="2dp"
+        android:layout_marginBottom="606dp"
+        android:alpha="0.4"
+        android:src="@drawable/donation" />
 
 
 </RelativeLayout>
