--- a/app/src/main/res/drawable-v24/button_bg2.xml
+++ b/app/src/main/res/drawable-v24/button_bg2.xml
@@ -2,10 +2,10 @@
     android:shape="rectangle"
     >
 
-    <solid android:color="@android:color/transparent" />
+    <solid android:color="@android:color/white" />
     <stroke
         android:width="2dp"
-        android:color="@color/black" >
+        android:color="@color/yellow_musterd" >
 
     </stroke>
 
