--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -28,10 +28,13 @@
 
         <androidx.cardview.widget.CardView
 
-            android:layout_width="370dp"
-            android:layout_height="650dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginTop="100dp"
-            android:layout_marginBottom="1dp"
+            android:layout_marginBottom="30dp"
+            android:layout_marginStart="50dp"
+
+
             android:layout_centerHorizontal="true"
             app:cardCornerRadius="38dp"
             app:cardElevation="8dp">
