--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -34,7 +34,7 @@
             android:layout_marginBottom="30dp"
             android:layout_marginStart="50dp"
 
-
+            app:cardBackgroundColor="@color/white"
             android:layout_centerHorizontal="true"
             app:cardCornerRadius="38dp"
             app:cardElevation="8dp">
@@ -42,20 +42,214 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white"
                 >
 
                 <TextView
                     android:id="@+id/Login_txt"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="SIGN UP"
+                    android:text="REGISTER"
                     android:textSize="41sp"
-
                     android:fontFamily="@font/cocogoose"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="30dp"
-                    android:textColor="#4E4545" />
+                    android:layout_marginTop="20dp"
+                    android:textColor="@color/grey" />
+
+                <LinearLayout
+                    android:id="@+id/username_field"
+                    android:layout_below="@+id/Login_txt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginLeft="40dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="USERNAME"
+                        android:textSize="13sp"
+                        android:layout_marginStart="3dp"
+                        android:textColor="@color/grey"
+                        android:fontFamily="@font/lato"
+                        />
+                    <EditText
+                        android:id="@+id/signUp_username"
+                        android:layout_marginTop="1dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:textColor="@color/grey"
+                        android:backgroundTint="@color/grey"
+                        android:inputType="text"
+
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/email_field"
+                    android:layout_below="@+id/username_field"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginLeft="40dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="EMAIL"
+                        android:textSize="13sp"
+                        android:layout_marginStart="3dp"
+                        android:textColor="@color/grey"
+                        android:fontFamily="@font/lato"
+                        />
+                    <EditText
+                        android:id="@+id/signUp_email"
+                        android:layout_marginTop="1dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:textColor="@color/grey"
+                        android:backgroundTint="@color/grey"
+                        android:inputType="textEmailAddress"
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/address_field"
+                    android:layout_below="@+id/email_field"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginLeft="40dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="ADDRESS"
+                        android:textSize="13sp"
+                        android:layout_marginStart="3dp"
+                        android:textColor="@color/grey"
+                        android:fontFamily="@font/lato"
+                        />
+                    <EditText
+                        android:id="@+id/signUp_address"
+                        android:layout_marginTop="1dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:textColor="@color/grey"
+                        android:backgroundTint="@color/grey"
+                        android:inputType="textEmailAddress"
+
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/phoneNumber_field"
+                    android:layout_below="@+id/address_field"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginLeft="40dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="PHONE NUMBER"
+                        android:textSize="13sp"
+                        android:layout_marginStart="3dp"
+                        android:textColor="@color/grey"
+                        android:fontFamily="@font/lato"
+                        />
+                    <EditText
+                        android:id="@+id/signUp_phoneNumber"
+                        android:layout_marginTop="1dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:textColor="@color/grey"
+                        android:backgroundTint="@color/grey"
+                        android:inputType="phone"
+
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/reconfirmPassword_field"
+                    android:layout_below="@+id/password_field"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginLeft="40dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="RECONFIRM PASSWORD"
+                        android:textSize="13sp"
+                        android:layout_marginStart="3dp"
+                        android:textColor="@color/grey"
+                        android:fontFamily="@font/lato"
+                        />
+                    <EditText
+                        android:id="@+id/signUp_reconfirmPassword"
+                        android:layout_marginTop="1dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:textColor="@color/grey"
+                        android:backgroundTint="@color/grey"
+                        android:inputType="textPassword"
+
+                        />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/password_field"
+                    android:layout_below="@+id/phoneNumber_field"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginRight="40dp"
+                    android:layout_marginLeft="40dp"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="PASSWORD"
+                        android:layout_marginStart="3dp"
+                        android:textSize="13sp"
+                        android:textColor="@color/grey"
+                        android:fontFamily="@font/lato"/>
+                    <EditText
+                        android:id="@+id/login_password"
+                        android:layout_marginTop="1dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:textColor="@color/grey"
+                        android:backgroundTint="@color/grey"
+                        android:inputType="textPassword"/>
+                </LinearLayout>
+
+
+
+                <Button
+                    android:id="@+id/LoginSubmit_btn"
+                    android:layout_below="@+id/reconfirmPassword_field"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/button_bg1"
+                    android:textSize="25sp"
+                    android:fontFamily="@font/cocogoose"
+                    android:textStyle="bold"
+                    android:paddingLeft="66dp"
+                    android:paddingRight="66dp"
+                    android:text="SIGN UP"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp"
+                    android:textColor="#ffff"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="10dp"/>
 
 
             </RelativeLayout>
