--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,7 +24,7 @@
             android:fontFamily="@font/cocogoose"
             android:text="doNeed"
             android:textColor="#54000000"
-            android:textSize="60sp" />
+            android:textSize="88sp" />
 
         <androidx.cardview.widget.CardView
 
@@ -52,7 +52,7 @@
                     android:fontFamily="@font/cocogoose"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="30dp"
-                    android:textColor="@color/grey" />
+                    android:textColor="#504E4E" />
 
                 <LinearLayout
                     android:id="@+id/email_field"
@@ -77,7 +77,7 @@
                         android:layout_marginTop="1dp"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
-                        android:textColor="@color/grey"
+                        android:textColor="@color/black"
                         android:backgroundTint="@color/grey"
                         android:inputType="textEmailAddress"
                         />
@@ -105,7 +105,7 @@
                         android:layout_marginTop="1dp"
                         android:layout_width="match_parent"
                         android:layout_height="40dp"
-                        android:textColor="@color/grey"
+                        android:textColor="@color/black"
                         android:backgroundTint="@color/grey"
                         android:inputType="textPassword"/>
                 </LinearLayout>
@@ -137,6 +137,18 @@
                     android:textColor="#ffff"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="50dp"/>
+
+                <TextView
+
+                    android:layout_below="@+id/LoginSubmit_btn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Don't have an account? Sign Up."
+                    android:id="@+id/txt_signUp"
+                    android:textColor="@color/grey"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="10dp"
+                    />
 
 
             </RelativeLayout>
