--- a/app/src/main/res/drawable-v24/button_bg1.xml
+++ b/app/src/main/res/drawable-v24/button_bg1.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <solid
-        android:color="@color/yellow_musterd">
+        android:color="@color/blue">
 
     </solid>
     <corners
