--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -10,7 +10,7 @@
         android:id="@+id/logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="LOGOUT"
+        android:text="@string/logout"
         tools:layout_editor_absoluteX="158dp"
         tools:layout_editor_absoluteY="281dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
