--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#C6C6C6</color>
+    <color name="lightGrey">#F2F2F2</color>
+    <color name="darkGrey">#707070</color>
     <color name="blue">#1B75B5</color>
 </resources>
 
