--- a/app/src/main/res/layout-v28/activity_donate.xml
+++ b/app/src/main/res/layout-v28/activity_donate.xml
@@ -1,27 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/lightGrey"
     tools:context=".donate">
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?android:attr/windowBackground"
+        android:background="@color/yellow_musterd"
         android:id="@+id/bar">
 
         <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="?android:attr/windowBackground"
+            android:background="@color/yellow_musterd"
             android:id="@+id/toolbar" >
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+
                 >
                 <ImageView
                     android:layout_width="25dp"
@@ -44,9 +47,6 @@
                     />
 
 
-
-
-
             </RelativeLayout>
 
 
@@ -62,24 +62,109 @@
         android:padding="8dp"
         android:orientation="vertical">
 
-        <ImageView
+        <RelativeLayout
+            android:layout_marginTop="10dp"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
-            android:scaleType="centerInside"
-            android:layout_gravity="center"
-            android:src="@drawable/plus"
-            android:outlineAmbientShadowColor="@color/grey"
-            android:id="@+id/image_added"/>
+            android:layout_height="match_parent"
+            android:background="@drawable/button_backgroynd"
+            android:layout_marginLeft="21dp"
+            android:layout_marginRight="21dp"
+            >
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:scaleType="centerInside"
+                android:layout_gravity="center"
+                android:src="@mipmap/ic_launcher_foreground"
+
+                android:id="@+id/image_added"
+                app:tint="@color/yellow_musterd" />
+
+        </RelativeLayout>
+
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:hint="Tittle"
+            android:textColorHint="@color/grey"
+            android:maxLines="5"
+            android:id="@+id/Tittle"
+            android:background="@drawable/text_background"
+            android:padding="10dp"
+            android:layout_marginLeft="21dp"
+            android:layout_marginRight="21dp"
+            android:inputType="text"
+            android:textColor="@color/black"
+            />
 
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:hint="Description"
+            android:textColorHint="@color/grey"
             android:maxLines="5"
-            android:id="@+id/description"
-
+            android:id="@+id/Description"
+            android:background="@drawable/text_background"
+            android:padding="10dp"
+            android:layout_marginLeft="21dp"
+            android:layout_marginRight="21dp"
+            android:inputType="textImeMultiLine"
+            android:textColor="@color/black"
             />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:hint="Category"
+            android:textColorHint="@color/grey"
+            android:maxLines="5"
+            android:id="@+id/category"
+            android:background="@drawable/text_background"
+            android:padding="10dp"
+            android:layout_marginLeft="21dp"
+            android:layout_marginRight="21dp"
+            android:inputType="textImeMultiLine"
+            android:textColor="@color/black"
+            />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:hint="Quantity"
+            android:textColorHint="@color/grey"
+            android:maxLines="5"
+            android:id="@+id/Quantity"
+            android:background="@drawable/text_background"
+            android:padding="10dp"
+            android:layout_marginLeft="21dp"
+            android:layout_marginRight="21dp"
+            android:inputType="number"
+            android:textColor="@color/black"
+            />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:hint="State"
+            android:textColorHint="@color/grey"
+            android:maxLines="5"
+            android:id="@+id/Location"
+            android:background="@drawable/text_background"
+            android:padding="10dp"
+            android:layout_marginLeft="21dp"
+            android:layout_marginRight="21dp"
+            android:inputType="textImeMultiLine"
+            android:textColor="@color/black"
+            />
+
+
 
 
     </LinearLayout>
