--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -37,6 +37,8 @@ android:background="@color/white"
         android:id="@+id/logout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
         android:text="logout"
         tools:layout_editor_absoluteX="158dp"
         tools:layout_editor_absoluteY="281dp" />
