--- a/app/src/main/res/layout/fragment_donate.xml
+++ b/app/src/main/res/layout/fragment_donate.xml
@@ -6,11 +6,177 @@
     android:layout_height="match_parent"
     tools:context=".fragment.donateFragment">
 
-    <TextView
-        android:id="@+id/text_notifications"
+
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@color/lightGrey"
+        tools:context=".donate">
+
+        <com.google.android.material.appbar.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/yellow_musterd"
+            android:id="@+id/bar">
+
+            <androidx.appcompat.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/yellow_musterd"
+                android:id="@+id/toolbar" >
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+
+                    >
+                    <ImageView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:layout_alignParentStart="true"
+
+                        android:src="@drawable/arrow"
+                        android:id="@+id/close" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="POST"
+                        android:id="@+id/post"
+                        android:textSize="16sp"
+                        android:layout_marginEnd="15dp"
+                        android:layout_centerVertical="true"
+                        android:layout_alignParentEnd="true"
+                        android:textColor="@color/black"
+                        />
+
+
+                </RelativeLayout>
+
+
+            </androidx.appcompat.widget.Toolbar>
+
+
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:padding="8dp"
+            android:orientation="vertical">
+
+            <RelativeLayout
+                android:layout_marginTop="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/button_backgroynd"
+                android:layout_marginLeft="21dp"
+                android:layout_marginRight="21dp"
+                >
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="200dp"
+                    android:scaleType="centerInside"
+                    android:layout_gravity="center"
+                    android:src="@mipmap/ic_launcher_foreground"
+
+                    android:id="@+id/image_added"
+                    app:tint="@color/yellow_musterd" />
+
+            </RelativeLayout>
+
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:hint="Tittle"
+                android:textColorHint="@color/grey"
+                android:maxLines="5"
+                android:id="@+id/Tittle"
+                android:background="@drawable/text_background"
+                android:padding="10dp"
+                android:layout_marginLeft="21dp"
+                android:layout_marginRight="21dp"
+                android:inputType="text"
+                android:textColor="@color/black"
+                />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:hint="Description"
+                android:textColorHint="@color/grey"
+                android:maxLines="5"
+                android:id="@+id/Description"
+                android:background="@drawable/text_background"
+                android:padding="10dp"
+                android:layout_marginLeft="21dp"
+                android:layout_marginRight="21dp"
+                android:inputType="textImeMultiLine"
+                android:textColor="@color/black"
+                />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:hint="Category"
+                android:textColorHint="@color/grey"
+                android:maxLines="5"
+                android:id="@+id/category"
+                android:background="@drawable/text_background"
+                android:padding="10dp"
+                android:layout_marginLeft="21dp"
+                android:layout_marginRight="21dp"
+                android:inputType="textImeMultiLine"
+                android:textColor="@color/black"
+                />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:hint="Quantity"
+                android:textColorHint="@color/grey"
+                android:maxLines="5"
+                android:id="@+id/Quantity"
+                android:background="@drawable/text_background"
+                android:padding="10dp"
+                android:layout_marginLeft="21dp"
+                android:layout_marginRight="21dp"
+                android:inputType="number"
+                android:textColor="@color/black"
+                />
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:hint="State"
+                android:textColorHint="@color/grey"
+                android:maxLines="5"
+                android:id="@+id/Location"
+                android:background="@drawable/text_background"
+                android:padding="10dp"
+                android:layout_marginLeft="21dp"
+                android:layout_marginRight="21dp"
+                android:inputType="textImeMultiLine"
+                android:textColor="@color/black"
+                />
+
+
+
+
+        </LinearLayout>
+
+
+    </LinearLayout>="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
