--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context=".fragment.HomeFragment">
+tools:context=".fragment.HomeFragment"
+    android:orientation="vertical">
 
 <com.google.android.material.appbar.AppBarLayout
     android:layout_width="match_parent"
@@ -33,11 +34,13 @@ tools:context=".fragment.HomeFragment">
                 app:tint="@color/darkGrey"
                 />
 
-            <de.hdodenhof.circleimageview.CircleImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+            <ImageView
+                android:src="@drawable/chat"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
                 android:layout_marginRight="18dp"
                 android:layout_alignParentEnd="true"
+                app:tint="@color/darkGrey"
                 android:id="@+id/image_profile" />
             <TextView
                 android:layout_width="wrap_content"
@@ -56,26 +59,39 @@ tools:context=".fragment.HomeFragment">
 
 <com.google.android.material.appbar.AppBarLayout
     android:id="@+id/filter"
-    android:layout_below="@id/bar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white">
-    <androidx.appcompat.widget.Toolbar
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        >
 
-    </androidx.appcompat.widget.Toolbar>
+        <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="State"
+                android:textColor="@color/darkGrey"
+                android:layout_weight="1"
+                style="?android:attr/buttonBarButtonStyle"
+
+                />
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:textColor="@color/darkGrey"
+                android:text="Category"
+                style="?android:attr/buttonBarButtonStyle"/>
+
+
+    </LinearLayout>
 
 </com.google.android.material.appbar.AppBarLayout>
 
 <androidx.core.widget.NestedScrollView
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_below="@+id/bar"
-    >
+    android:layout_height="wrap_content">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -83,11 +99,11 @@ tools:context=".fragment.HomeFragment">
         >
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_viewhome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/recycler_viewhome"
-            android:layout_below="@+id/bar"
-            android:layout_margin="5dp"/>
+            android:layout_margin="5dp"
+            />
 
     </LinearLayout>
 
@@ -97,11 +113,11 @@ tools:context=".fragment.HomeFragment">
 
 
 
-<ProgressBar
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:id="@+id/progress_circular"
-    android:layout_centerInParent="true"
-    />
+<!--<ProgressBar-->
+<!--    android:layout_width="wrap_content"-->
+<!--    android:layout_height="wrap_content"-->
+<!--    android:id="@+id/progress_circular"-->
+<!--    android:layout_centerInParent="true"-->
+<!--    />-->
 
-</RelativeLayout>
+</LinearLayout>
