--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -12,7 +12,7 @@
         android:title="donate" />
 
     <item
-        android:id="@+id/navigation_chatting"
+        android:id="@+id/navigation_profile"
         android:icon="@drawable/user"
         android:title="profile" />
 
