--- a/app/src/main/res/layout/fragment_donate.xml
+++ b/app/src/main/res/layout/fragment_donate.xml
@@ -4,62 +4,66 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/fragment_donate"
     tools:context=".fragment.donateFragment">
 
 
+    <include
+        layout="@layout/apptoolbar"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@color/lightGrey"
+        android:layout_marginTop="?attr/actionBarSize"
         tools:context=".donate">
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/yellow_musterd"
-            android:id="@+id/bar">
+<!--        <com.google.android.material.appbar.AppBarLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:background="@color/yellow_musterd"-->
+<!--            android:id="@+id/bar">-->
 
-            <androidx.appcompat.widget.Toolbar
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/yellow_musterd"
-                android:id="@+id/toolbar" >
+<!--            <androidx.appcompat.widget.Toolbar-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:background="@color/yellow_musterd"-->
+<!--                android:id="@+id/toolbar" >-->
 
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+<!--                <RelativeLayout-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
 
-                    >
-                    <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_alignParentStart="true"
+<!--                    >-->
+<!--                    <ImageView-->
+<!--                        android:layout_width="25dp"-->
+<!--                        android:layout_height="25dp"-->
+<!--                        android:layout_alignParentStart="true"-->
 
-                        android:src="@drawable/arrow"
-                        android:id="@+id/close" />
+<!--                        android:src="@drawable/arrow"-->
+<!--                        android:id="@+id/close" />-->
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="POST"
-                        android:id="@+id/post"
-                        android:textSize="16sp"
-                        android:layout_marginEnd="15dp"
-                        android:layout_centerVertical="true"
-                        android:layout_alignParentEnd="true"
-                        android:textColor="@color/black"
-                        />
-
-
-                </RelativeLayout>
+<!--                    <TextView-->
+<!--                        android:layout_width="wrap_content"-->
+<!--                        android:layout_height="wrap_content"-->
+<!--                        android:text="POST"-->
+<!--                        android:id="@+id/post"-->
+<!--                        android:textSize="16sp"-->
+<!--                        android:layout_marginEnd="15dp"-->
+<!--                        android:layout_centerVertical="true"-->
+<!--                        android:layout_alignParentEnd="true"-->
+<!--                        android:textColor="@color/black"-->
+<!--                        />-->
 
 
-            </androidx.appcompat.widget.Toolbar>
+<!--                </RelativeLayout>-->
 
 
-        </com.google.android.material.appbar.AppBarLayout>
+<!--            </androidx.appcompat.widget.Toolbar>-->
+
+
+<!--        </com.google.android.material.appbar.AppBarLayout>-->
 
         <LinearLayout
             android:layout_width="match_parent"
