new back and exit function

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,8 @@
     android:orientation="vertical">
 
     <include
-        layout="@layout/apptoolbar"/>
+        layout="@layout/apptoolbar"
+        />
 
 <!--<com.google.android.material.appbar.AppBarLayout-->
 <!--    android:layout_width="match_parent"-->
