--- a/app/src/main/res/layout/apptoolbar.xml
+++ b/app/src/main/res/layout/apptoolbar.xml
@@ -5,5 +5,30 @@
     android:background="@color/yellow_musterd"
     android:id="@+id/app_toolbar"
     >
+    <TextView
+        android:id="@+id/text_doNeed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="doNeed"
+        android:fontFamily="@font/lato"
+        android:layout_centerVertical="true"
+        android:textSize="25sp"
+        android:layout_marginStart="26dp"
+        android:textStyle="bold"
+        android:visibility="gone"/>
+
+    <TextView
+        android:id="@+id/text_Donate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Donate"
+        android:fontFamily="@font/lato"
+        android:layout_centerVertical="true"
+        android:textSize="25sp"
+        android:layout_marginStart="0dp"
+        android:textStyle="bold"
+        android:visibility="gone"/>
+
+
 
 </androidx.appcompat.widget.Toolbar>
