--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -29,10 +29,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="doNeed"
-                    android:fontFamily="@font/cocogoose"
+                    android:fontFamily="@font/lato"
                     android:layout_centerVertical="true"
-                    android:textSize="20sp"
-                    android:layout_marginStart="10dp"/>
+                    android:textSize="25sp"
+                    android:layout_marginStart="10dp"
+                    android:textStyle="bold"/>
 
 
             </RelativeLayout>
