redesign edit text form in fragemnt_donate.xml

--- a/app/src/main/res/layout/fragment_donate.xml
+++ b/app/src/main/res/layout/fragment_donate.xml
@@ -7,7 +7,6 @@
     android:id="@+id/fragment_donate"
     tools:context=".fragment.donateFragment">
 
-
     <include
         layout="@layout/apptoolbar"/>
 
@@ -19,63 +18,16 @@
         android:layout_marginTop="?attr/actionBarSize"
         tools:context=".donate">
 
-<!--        <com.google.android.material.appbar.AppBarLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:background="@color/yellow_musterd"-->
-<!--            android:id="@+id/bar">-->
-
-<!--            <androidx.appcompat.widget.Toolbar-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:background="@color/yellow_musterd"-->
-<!--                android:id="@+id/toolbar" >-->
-
-<!--                <RelativeLayout-->
-<!--                    android:layout_width="match_parent"-->
-<!--                    android:layout_height="wrap_content"-->
-
-<!--                    >-->
-<!--                    <ImageView-->
-<!--                        android:layout_width="25dp"-->
-<!--                        android:layout_height="25dp"-->
-<!--                        android:layout_alignParentStart="true"-->
-
-<!--                        android:src="@drawable/arrow"-->
-<!--                        android:id="@+id/close" />-->
-
-<!--                    <TextView-->
-<!--                        android:layout_width="wrap_content"-->
-<!--                        android:layout_height="wrap_content"-->
-<!--                        android:text="POST"-->
-<!--                        android:id="@+id/post"-->
-<!--                        android:textSize="16sp"-->
-<!--                        android:layout_marginEnd="15dp"-->
-<!--                        android:layout_centerVertical="true"-->
-<!--                        android:layout_alignParentEnd="true"-->
-<!--                        android:textColor="@color/black"-->
-<!--                        />-->
-
-
-<!--                </RelativeLayout>-->
-
-
-<!--            </androidx.appcompat.widget.Toolbar>-->
-
-
-<!--        </com.google.android.material.appbar.AppBarLayout>-->
-
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-
+            android:layout_height="match_parent"
             android:padding="8dp"
             android:orientation="vertical">
 
             <RelativeLayout
                 android:layout_marginTop="10dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:background="@drawable/button_backgroynd"
                 android:layout_marginLeft="21dp"
                 android:layout_marginRight="21dp"
@@ -108,6 +60,7 @@
                 android:layout_marginRight="21dp"
                 android:inputType="text"
                 android:textColor="@color/black"
+                android:elevation="2dp"
                 />
 
             <EditText
@@ -116,14 +69,15 @@
                 android:layout_marginTop="15dp"
                 android:hint="Description"
                 android:textColorHint="@color/grey"
-                android:maxLines="5"
                 android:id="@+id/Description"
                 android:background="@drawable/text_background"
                 android:padding="10dp"
                 android:layout_marginLeft="21dp"
                 android:layout_marginRight="21dp"
-                android:inputType="textImeMultiLine"
                 android:textColor="@color/black"
+                android:inputType="textMultiLine"
+                android:maxLines="5"
+                android:elevation="2dp"
                 />
 
             <EditText
@@ -140,6 +94,7 @@
                 android:layout_marginRight="21dp"
                 android:inputType="textImeMultiLine"
                 android:textColor="@color/black"
+                android:elevation="2dp"
                 />
 
             <EditText
@@ -156,6 +111,7 @@
                 android:layout_marginRight="21dp"
                 android:inputType="number"
                 android:textColor="@color/black"
+                android:elevation="2dp"
                 />
 
             <EditText
@@ -172,21 +128,10 @@
                 android:layout_marginRight="21dp"
                 android:inputType="textImeMultiLine"
                 android:textColor="@color/black"
+                android:elevation="2dp"
                 />
-
-
-
 
         </LinearLayout>
 
-
-    </LinearLayout>="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
